# rest/get_users.go
@@ -6,21 +6,13 @@ import (
 	"github.com/nmarsollier/authgo/user"
 )
 
-type UserDataResponse struct {
-	Id          string   `json:"id"`
-	Name        string   `json:"name"`
-	Permissions []string `json:"permissions"`
-	Login       string   `json:"login"`
-	Enabled     bool     `json:"enabled"`
-}
-
 //	@Summary		Listar Usuarios
 //	@Description	Obtiene información de todos los usuarios. El usuario logueado debe tener permisos "admin".
 //	@Tags			Seguridad
 //	@Accept			json
 //	@Produce		json
 //	@Param			Authorization	header		string				true	"Bearer {token}"
-//	@Success		200				{array}		UserDataResponse	"Users"
+//	@Success		200				{array}		user.UserResponse	"Users"
 //	@Failure		400				{object}	errs.ValidationErr	"Bad Request"
 //	@Failure		401				{object}	server.ErrorData	"Unauthorized"
 //	@Failure		404				{object}	server.ErrorData	"Not Found"
@@ -38,21 +30,11 @@ func getUsersRoute() {
 
 func users(c *gin.Context) {
 	ctx := server.GinCtx(c)
-	user, err := user.FindAllUsers(ctx...)
+	result, err := user.FindAllUsers(ctx...)
 
 	if err != nil {
 		server.AbortWithError(c, err)
 		return
-	}
-	result := []UserDataResponse{}
-	for i := 0; i < len(user); i = i + 1 {
-		result = append(result, UserDataResponse{
-			Id:          user[i].ID.Hex(),
-			Name:        user[i].Name,
-			Permissions: user[i].Permissions,
-			Login:       user[i].Login,
-			Enabled:     user[i].Enabled,
-		})
 	}
 
 	c.JSON(200, result)
