# user/user_response.go
@@ -1,0 +1,9 @@
+package user
+
+type UserResponse struct {
+	Id          string   `json:"id"`
+	Name        string   `json:"name"`
+	Permissions []string `json:"permissions"`
+	Login       string   `json:"login"`
+	Enabled     bool     `json:"enabled"`
+}
